finished  homesection and start with skills-section

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="../../assets/img/logo_white.png" alt="">
+    <img class="header-logo" src="../../assets/img/logo_white.png" alt="">
 
     <div>
         <a href="#">Home</a>
@@ -7,4 +7,6 @@
         <a href="#">Portfolio</a>
         <a href="#">Imprint</a>
     </div>
+
+    <img class="burger-menu" src="../../assets/icons/menu_FILL0_wght400_GRAD0_opsz48.png" alt="">
 </header>
