--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,84 +1,50 @@
-/* open-sans-regular - latin */
+/* inter-regular - latin */
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    src: url('../src/assets/fonts/open-sans-v29-latin-regular.eot');
+    src: url('../src/assets/fonts/inter-v11-latin-regular.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../src/assets/fonts/open-sans-v29-latin-regular.eot?#iefix') format('embedded-opentype'),
+        url('../src/assets/fonts/inter-v11-latin-regular.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../src/assets/fonts/open-sans-v29-latin-regular.woff2') format('woff2'),
+        url('../src/assets/fonts/inter-v11-latin-regular.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-regular.woff') format('woff'),
+        url('../src/assets/fonts/inter-v11-latin-regular.woff') format('woff'),
         /* Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-regular.ttf') format('truetype'),
+        url('../src/assets/fonts/inter-v11-latin-regular.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../src/assets/fonts/open-sans-v29-latin-regular.svg#OpenSans') format('svg');
+        url('../src/assets/fonts/inter-v11-latin-regular.svg#Inter') format('svg');
     /* Legacy iOS */
 }
 
-/* open-sans-700 - latin */
+/* inter-700 - latin */
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    src: url('../src/assets/fonts/open-sans-v29-latin-700.eot');
+    src: url('../src/assets/fonts/inter-v11-latin-700.eot');
     /* IE9 Compat Modes */
     src: local(''),
-        url('../src/assets/fonts/open-sans-v29-latin-700.eot?#iefix') format('embedded-opentype'),
+        url('../src/assets/fonts/inter-v11-latin-700.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../src/assets/fonts/open-sans-v29-latin-700.woff2') format('woff2'),
+        url('../src/assets/fonts/inter-v11-latin-700.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-700.woff') format('woff'),
+        url('../src/assets/fonts/inter-v11-latin-700.woff') format('woff'),
         /* Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-700.ttf') format('truetype'),
+        url('../src/assets/fonts/inter-v11-latin-700.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../src/assets/fonts/open-sans-v29-latin-700.svg#OpenSans') format('svg');
+        url('../src/assets/fonts/inter-v11-latin-700.svg#Inter') format('svg');
     /* Legacy iOS */
 }
 
-/* open-sans-italic - latin */
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 400;
-    src: url('../src/assets/fonts/open-sans-v29-latin-italic.eot');
-    /* IE9 Compat Modes */
-    src: local(''),
-        url('../src/assets/fonts/open-sans-v29-latin-italic.eot?#iefix') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../src/assets/fonts/open-sans-v29-latin-italic.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-italic.woff') format('woff'),
-        /* Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-italic.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../src/assets/fonts/open-sans-v29-latin-italic.svg#OpenSans') format('svg');
-    /* Legacy iOS */
-}
-
-/* open-sans-700italic - latin */
-@font-face {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: 700;
-    src: url('../src/assets/fonts/open-sans-v29-latin-700italic.eot');
-    /* IE9 Compat Modes */
-    src: local(''),
-        url('../src/assets/fonts/open-sans-v29-latin-700italic.eot?#iefix') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../src/assets/fonts/open-sans-v29-latin-700italic.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-700italic.woff') format('woff'),
-        /* Modern Browsers */
-        url('../src/assets/fonts/open-sans-v29-latin-700italic.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../src/assets/fonts/open-sans-v29-latin-700italic.svg#OpenSans') format('svg');
-    /* Legacy iOS */
+* {
+    box-sizing: border-box;
+    margin: 0;
 }
 
 body {
     background-color: black;
-    font-family: 'Open Sans';
+    font-family: 'Inter';
+    color: whitesmoke;
 }
