--- a/src/app/skills-section/skills-section.component.scss
+++ b/src/app/skills-section/skills-section.component.scss
@@ -2,9 +2,17 @@
     width: 100vw;
     height: 100vh;
     background-color: #1A1A1A;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .skills-headline {
-        padding-top: 40px;
+        position: absolute;
+        top: 40px;
+        left: 0;
+        right: 0;
+
         h2 {
             font-size: 36px;
             display: flex;
@@ -16,12 +24,46 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        width: 900px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 37.5px;
 
         .skill-box {
-            width: 150px;
-            height: 100px;
+            position: relative;
+
+            .skill-icon-container {
+                background-color: white;
+                width: 75px;
+                height: 75px;
+                position: absolute;
+                top: -39px;
+                left: 64px;
+                right: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+                box-shadow: 0 0 5px;
+
+                img {
+                    width: 40px;
+                    object-fit: cover;
+                }
+            }
+
+
+
+            width: 200px;
+            height: 150px;
             background-color: white;
-            margin: 1rem;
+            margin: 2rem;
+            border-radius: 12px;
+            color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 700;
         }
     }
 }
