current status skills-section

--- a/src/app/skills-section/skills-section.component.scss
+++ b/src/app/skills-section/skills-section.component.scss
@@ -24,7 +24,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        width: 900px;
+        width: 1000px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 37.5px;
@@ -57,7 +57,7 @@
             width: 200px;
             height: 150px;
             background-color: white;
-            margin: 2rem;
+            margin: 2rem 4rem;
             border-radius: 12px;
             color: black;
             display: flex;
