added the portfolio-component

--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -1,6 +1,6 @@
 <div class="skills-section-container">
 
-    <div class="skills-headline">
+    <div id="skills-section" class="skills-headline">
         <h2>My Skills</h2>
     </div>
 
