--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -1,4 +1,4 @@
-<div class="home-section-container">
+<div id="home-section" class="home-section-container">
 
     <div class="home-section">
         <div>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="down-icon-container">
-        <img class="down-icon" src="../../assets/icons/down-icon.png" alt="">
+        <a href="#skills-section"><img class="down-icon" src="../../assets/icons/down-icon.png" alt=""></a>
     </div>
 
 </div>
