--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,8 +2,8 @@
     <img class="header-logo" src="../../assets/img/logo_white.png" alt="">
 
     <div>
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="#home-section">Home</a>
+        <a href="#skills-section">Skills</a>
         <a href="#">Portfolio</a>
         <a href="#">Imprint</a>
     </div>
