--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav-bar></app-nav-bar>
 <app-home-section></app-home-section>
 <app-skills-section></app-skills-section>
+<app-portfolio-section></app-portfolio-section>
