--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -1,1 +1,13 @@
-<p>portfolio-section works!</p>
+<div class="portfolio-section-container">
+
+    <div class="header-container">
+        <h2>Portfolio</h2>
+    </div>
+
+    <div class="project-filter-container">
+        <div class="project-filter">All</div>
+        <div class="project-filter">Angular</div>
+        <div class="project-filter">JavaScript</div>
+    </div>
+
+</div>
