--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -5,9 +5,33 @@
     </div>
 
     <div class="project-filter-container">
-        <div class="project-filter">All</div>
+        <div (click)="showAllProjects()" class="project-filter">All</div>
         <div class="project-filter">Angular</div>
         <div class="project-filter">JavaScript</div>
+    </div>
+
+    <div class="projects-container">
+
+        <div class="projects-boxes-container">
+
+            <div class="project-box">
+                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+            </div>
+
+            <div class="project-box">
+                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+            </div>
+
+            <div class="project-box">
+                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+            </div>
+
+            <div class="project-box">
+                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+            </div>
+
+        </div>
+
     </div>
 
 </div>
