--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-home-section></app-home-section>
 <app-skills-section></app-skills-section>
 <app-portfolio-section></app-portfolio-section>
+<app-about-me-section></app-about-me-section>
+<app-contact-section></app-contact-section>
