--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -1,13 +1,10 @@
 .portfolio-section-container {
-    width: 100vw;
-    height: 100vh;
-    padding-left: 105px;
-    padding-right: 105px;
+    max-width: 100vw;
+    padding: 40px 105px;
 
     .header-container {
         display: flex;
         justify-content: center;
-        margin-top: 40px;
 
         h2 {
             font-size: 36px;
@@ -28,6 +25,44 @@
             height: 80px;
             margin: 40px 20px;
             cursor: pointer;
+
+            &:hover {
+                background-color: rgb(250, 39, 89);
+                transition: 0.5s;
+            }
+        }
+    }
+
+    .projects-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+
+        .projects-boxes-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            width: 80%;
+        }
+
+        .project-box {
+            width: 450px;
+            height: 300px;
+            margin: 1rem;
+            border-radius: 12px;
+
+            .project-cover {
+                object-fit: cover;
+                width: 450px;
+                border-radius: 12px;
+            }
+
+            &:hover {
+                box-shadow: 5px 5px 18px -5px rgba(250,39,89,0.7);
+                transition: 0.5s;
+                cursor: pointer;
+            }
         }
     }
 }
