--- a/src/app/skills-section/skills-section.component.scss
+++ b/src/app/skills-section/skills-section.component.scss
@@ -1,18 +1,14 @@
 .skills-section-container {
     width: 100vw;
-    height: 100vh;
+    padding: 40px 0px;
     background-color: #1A1A1A;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 
     .skills-headline {
-        position: absolute;
-        top: 40px;
-        left: 0;
-        right: 0;
-
         h2 {
             font-size: 36px;
             display: flex;
