--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -1,6 +1,20 @@
 <div class="contact-me-container">
+
     <div class="headline-container">
         <h1>Contact me.</h1>
         <p>get in touch via the form below, or by emailing <a href="#">kevin_wagner4493@web.de</a> </p>
+    </div>
+
+    <div class="form-container">
+        <form action="">
+            <label for="fname">Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Enter your name">
+
+            <label for="email">Email address</label>
+            <input type="email" id="email" name="email" placeholder="Enter your name">
+
+            <label for="textarea">Message</label>
+            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+        </form>
     </div>
 </div>
