--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -1,6 +1,7 @@
 .contact-me-container {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding: 40px 105px;
 
     .headline-container {
@@ -18,6 +19,23 @@
         a {
             color: rgba(45, 252, 216, 0.7);
             text-decoration: none;
+        }
+    }
+
+    .form-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 1rem;
+
+        form {
+            display: flex;
+            flex-direction: column;
+
+            label {
+                // margin-bottom: 1rem;
+            }
         }
     }
 }
