some typo changes

--- a/src/app/about-me-section/about-me-section.component.html
+++ b/src/app/about-me-section/about-me-section.component.html
@@ -27,7 +27,7 @@
 
         <div class="cv-boxes">
             <div class="icon-container">
-                <img src="../../assets/icons/walk-line.png" alt="">
+                <img src="../../assets/icons/heart-line.png" alt="">
             </div>
             <div class="text-container">
                 <p class="headline">My Journey began</p>
@@ -40,7 +40,7 @@
 
         <div class="cv-boxes">
             <div class="icon-container">
-                <img src="../../assets/icons/walk-line.png" alt="">
+                <img src="../../assets/icons/search-line.png" alt="">
             </div>
             <div class="text-container">
                 <p class="headline">My Journey began</p>
@@ -53,7 +53,7 @@
 
         <div class="cv-boxes">
             <div class="icon-container">
-                <img src="../../assets/icons/walk-line.png" alt="">
+                <img src="../../assets/icons/flight-takeoff-line.png" alt="">
             </div>
             <div class="text-container">
                 <p class="headline">My Journey began</p>
