--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -12,8 +12,8 @@
         margin-bottom: 40px;
 
         img {
-            width: 175px;
-            height: 175px;
+            width: 200px;
+            height: 200px;
             object-fit: cover;
             border-radius: 100%;
         }
@@ -32,7 +32,8 @@
             }
 
             p{
-                font-size: 0.8rem;
+                font-size: 1rem;
+                line-height: 1.5;
             }
         }
     }
@@ -54,8 +55,8 @@
             flex-direction: column;
             text-align: center;
             align-items: center;
-            width: 150px;
-            font-size: 0.8rem;
+            width: 250px;
+            font-size: 1rem;
 
             .icon-container {
                 display: flex;
@@ -63,13 +64,13 @@
                 align-items: center;
                 background-color: #2dfcd8;
                 border-radius: 50%;
-                width: 50px;
-                height: 50px;
+                width: 70px;
+                height: 70px;
                 margin-bottom: 1rem;
 
                 img {
-                    width: 25px;
-                    height: 25px;
+                    width: 30px;
+                    height: 30px;
                     object-fit: cover;
                 }
             }
@@ -78,6 +79,10 @@
                 .headline {
                     margin-bottom: 1rem;
                     text-transform: uppercase;
+                }
+
+                p {
+                    line-height: 1.5;
                 }
             }
         }
