changed the viewport-high of the sections

--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -1,4 +1,4 @@
-<div class="skills-section-container">
+<div class="skills-section-container" id="skills-section-container">
 
     <div id="skills-section" class="skills-headline">
         <h2>My Skills</h2>
