--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -1,9 +1,10 @@
 .about-me-container {
     max-width: 100vw;
+    min-height: 100vh;
     background-color: #1A1A1A;
     padding: 40px 105px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
 
