--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="down-icon-container">
-        <a href="#skills-section"><img class="down-icon" src="../../assets/icons/down-icon.png" alt=""></a>
+        <a href="#skills-section-container"><img class="down-icon" src="../../assets/icons/down-icon.png" alt=""></a>
     </div>
 
 </div>
