some design changes

--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -17,4 +17,9 @@
             <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
         </form>
     </div>
+    <div class="button-container">
+        <div class="button">
+            <p>Send</p>
+        </div>
+    </div>
 </div>
