--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -1,7 +1,7 @@
 <div class="skills-section-container" id="skills-section-container">
 
-    <div id="skills-section" class="skills-headline">
-        <h2>My Skills</h2>
+    <div class="skills-headline">
+        <h1>My Skills</h1>
     </div>
 
     <div class="skill-boxes-container">
