--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -1,8 +1,10 @@
 .about-me-container {
-    max-width: 100vw;
-    min-height: 100vh;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 12px;
     background-color: #1A1A1A;
-    padding: 40px 105px;
+    padding: 60px 105px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -10,7 +12,7 @@
 
     .about-me-header {
         display: flex;
-        margin-bottom: 40px;
+        margin-bottom: 60px;
 
         img {
             width: 200px;
@@ -27,9 +29,11 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            color: rgba(255, 255, 255, 0.85);
 
-            h2 {
+            h1 {
                 margin-bottom: 1rem;
+                color: rgba(255, 255, 255, 1);
             }
 
             p{
@@ -47,7 +51,7 @@
     .about-me-body {
         display: flex;
         justify-content: space-between;
-        margin-top: 40px;
+        margin-top: 60px;
         width: 100%;
 
         .cv-boxes {
@@ -80,10 +84,12 @@
                 .headline {
                     margin-bottom: 1rem;
                     text-transform: uppercase;
+                    color: rgba(255, 255, 255, 1);
                 }
 
                 p {
                     line-height: 1.5;
+                    color: rgba(255, 255, 255, 0.85);
                 }
             }
         }
