--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-portfolio-section></app-portfolio-section>
 <app-about-me-section></app-about-me-section>
 <app-contact-section></app-contact-section>
+<app-footer-section></app-footer-section>
