--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,9 +3,9 @@
 
     <div>
         <a href="#home-section">Home</a>
-        <a href="#skills-section">Skills</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Imprint</a>
+        <a href="#skills-section-container">Skills</a>
+        <a href="#portfolio-section-container">Portfolio</a>
+        <a href="#footer-container">Imprint</a>
     </div>
 
     <img class="burger-menu" src="../../assets/icons/menu_FILL0_wght400_GRAD0_opsz48.png" alt="">
