--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -1,7 +1,7 @@
-<div class="portfolio-section-container">
+<div class="portfolio-section-container" id="portfolio-section-container">
 
     <div class="header-container">
-        <h2>Portfolio</h2>
+        <h1>Portfolio</h1>
     </div>
 
     <div class="project-filter-container">
