--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -1,15 +1,11 @@
 .portfolio-section-container {
     max-width: 100vw;
     min-height: 100vh;
-    padding: 40px 105px;
+    padding: 60px 105px;
 
     .header-container {
         display: flex;
         justify-content: center;
-
-        h2 {
-            font-size: 36px;
-        }
     }
 
     .project-filter-container {
@@ -51,12 +47,13 @@
             width: 450px;
             height: 300px;
             margin: 1rem;
-            border-radius: 12px;
+            border-radius: 6px;
 
             .project-cover {
                 object-fit: cover;
                 width: 450px;
-                border-radius: 12px;
+                border-radius: 6px;
+                overflow: hidden;
             }
 
             &:hover {
