--- a/src/app/skills-section/skills-section.component.scss
+++ b/src/app/skills-section/skills-section.component.scss
@@ -1,7 +1,9 @@
 .skills-section-container {
-    width: 100vw;
-    min-height: 100vh;
-    padding: 40px 0px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 12px;
+    padding: 60px 0px;
     background-color: #1A1A1A;
     position: relative;
     display: flex;
@@ -10,8 +12,7 @@
     flex-direction: column;
 
     .skills-headline {
-        h2 {
-            font-size: 36px;
+        h1 {
             display: flex;
             justify-content: center;
         }
@@ -24,7 +25,7 @@
         width: 1000px;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 37.5px;
+        margin-top: 60px;
 
         .skill-box {
             position: relative;
