--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -42,15 +42,22 @@
 
             input {
                 margin-bottom: 1.5rem;
+                padding-left: 1rem;
                 background-color: #1a1a1a;
                 border: none;
                 height: 45px;
+                outline-color: #2DFCD8;
+                color: rgba(255, 255, 255, 0.7);
             }
 
             textarea {
                 background-color: #1a1a1a;
                 border: none;
                 font-family: 'Inter';
+                padding-left: 1rem;
+                padding-top: 1rem;
+                outline-color: #2DFCD8;
+                color: rgba(255, 255, 255, 0.7);
             }
         }
     }
