changed some fonts

--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -34,6 +34,8 @@
             h1 {
                 margin-bottom: 1rem;
                 color: rgba(255, 255, 255, 1);
+                font-family: 'Exo 2';
+                text-transform: uppercase;
             }
 
             p{
@@ -85,6 +87,8 @@
                     margin-bottom: 1rem;
                     text-transform: uppercase;
                     color: rgba(255, 255, 255, 1);
+                    font-family: 'Exo 2';
+                    text-transform: uppercase;
                 }
 
                 p {
