--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -1,4 +1,4 @@
-<div class="contact-me-container">
+<div class="contact-me-container" id="contact-me-container">
 
     <div class="headline-container">
         <h1>Contact me.</h1>
@@ -19,7 +19,7 @@
     </div>
     <div class="button-container">
         <div class="button">
-            <p>Send</p>
+            <a href="#"><p>Send</p></a>
         </div>
     </div>
 </div>
