--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -7,7 +7,7 @@
             </div>
             
             <div class="button">
-                <p>Contact me</p>
+                <a href="#contact-me-container"><p>Contact me</p></a>
             </div>
         </div>
     
