--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img class="header-logo" src="../../assets/img/logo_white.png" alt="">
+    <a href="home-section"><img class="header-logo" src="../../assets/img/logo_white.png" alt=""></a>
 
     <div>
         <a href="#home-section">Home</a>
