--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -2,8 +2,16 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 105px;
-    padding-right: 105px;
+    padding: 0px 70px;
+    background-color: #1A1A1A;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    border-top-right-radius: 12px;
+    border-bottom-left-radius: 12px;
+    height: 75px;
+    font-family: 'Exo 2';
+    text-transform: uppercase;
 
     position: absolute;
     top: 60px;
@@ -20,13 +28,17 @@ header {
         filter: invert(95%) sepia(0%) saturate(7479%) hue-rotate(61deg) brightness(109%) contrast(104%);
     }
 
-    a {
-        margin-left: 54px;
-        color: whitesmoke;
-        text-decoration: none;
+    div {
+        font-size: 1.2rem;
 
-        &:hover {
-            color: #fa2759;
+        a {
+            margin-left: 54px;
+            color: whitesmoke;
+            text-decoration: none;
+    
+            &:hover {
+                color: #fa2759;
+            }
         }
     }
 }
