--- a/src/app/skills-section/skills-section.component.scss
+++ b/src/app/skills-section/skills-section.component.scss
@@ -15,6 +15,8 @@
         h1 {
             display: flex;
             justify-content: center;
+            font-family: 'Exo 2';
+            text-transform: uppercase;
         }
     }
 
