added portfolio screenshots

--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -15,19 +15,19 @@
         <div class="projects-boxes-container">
 
             <div class="project-box">
-                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_pollo_loco.png" alt="">
             </div>
 
             <div class="project-box">
-                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_ring_of_fire.png" alt="">
             </div>
 
             <div class="project-box">
-                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_kanban.png" alt="">
             </div>
 
             <div class="project-box">
-                <img class="project-cover" src="../../assets/img/blank_mac_screen_dark.jpg" alt="">
+                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_pokedex.png" alt="">
             </div>
 
         </div>
