--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -50,6 +50,7 @@
             height: 300px;
             margin: 1rem;
             border-radius: 6px;
+            position: relative;
 
             .project-cover {
                 object-fit: cover;
@@ -62,6 +63,44 @@
                 box-shadow: 5px 5px 18px -5px rgba(250,39,89,0.7);
                 transition: 125ms;
                 cursor: pointer;
+            }
+
+            .project-info {
+                background-color: white;
+                color: black;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                opacity: 0;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-direction: column;
+                padding: 3rem 2rem;
+
+                h1 {
+                    font-family: "Exo 2";
+                    text-transform: uppercase;
+                }
+
+                p {
+                    margin-top: 1rem;
+                    text-align: center;
+                }
+
+                button {
+                    border: 2px solid #FA2759;
+                    margin-left: 1rem;
+                    margin-right: 1rem;
+                    padding: 1rem;
+                    background-color: white;
+                }
+
+                &:hover {
+                    opacity: 0.7;
+                }
             }
         }
     }
