--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -5,9 +5,9 @@
     </div>
 
     <div class="project-filter-container">
-        <div (click)="showAllProjects()" class="project-filter">All</div>
-        <div (click)="showAngularProjects()" class="project-filter">Angular</div>
-        <div (click)="showJsProjects()" class="project-filter">JavaScript</div>
+        <div [class.active]="allProjects" (click)="showAllProjects()" class="project-filter">All</div>
+        <div [class.active]="angularProjects" (click)="showAngularProjects()" class="project-filter">Angular</div>
+        <div [class.active]="jsProjects" (click)="showJsProjects()" class="project-filter">JavaScript</div>
     </div>
 
     <div class="projects-container">
@@ -20,22 +20,46 @@
                     <h1>El Pollo Loco</h1>
                     <p>This is a 2D Jump and Run Game based on object-oriented programming (OOP)</p>
                     <div class="button-container">
-                        <button>Try it out</button>
-                        <button>Show me the Code</button>
+                        <button><a href="#">Try it out</a></button>
+                        <button><a href="#">Show me the Code</a></button>
                     </div>
                 </div>
             </div>
 
             <div class="project-box" *ngIf="allProjects || angularProjects">
                 <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_ring_of_fire.png" alt="">
+                <div class="project-info">
+                    <h1>Ring of Fire</h1>
+                    <p>This is an Angular based webapp of the popular drinking game</p>
+                    <div class="button-container">
+                        <button><a href="#">Try it out</a></button>
+                        <button><a href="#">Show me the Code</a></button>
+                    </div>
+                </div>
             </div>
 
             <div class="project-box" *ngIf="allProjects || jsProjects" >
                 <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_kanban.png" alt="">
+                <div class="project-info">
+                    <h1>Join - Kanban Board</h1>
+                    <p>This is a Kanban Board for project and personal management. </p>
+                    <div class="button-container">
+                        <button><a href="#">Try it out</a></button>
+                        <button><a href="#">Show me the Code</a></button>
+                    </div>
+                </div>
             </div>
 
             <div class="project-box" *ngIf="allProjects || jsProjects">
                 <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_pokedex.png" alt="">
+                <div class="project-info">
+                    <h1>Pokedex</h1>
+                    <p>This is a collection of Pokemon and their skills based on the Pokedex-API</p>
+                    <div class="button-container">
+                        <button><a href="#">Try it out</a></button>
+                        <button><a href="#">Show me the Code</a></button>
+                    </div>
+                </div>
             </div>
 
         </div>
