--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -15,6 +15,10 @@
         justify-content: center;
         align-items: center;
 
+        .active {
+            background-color: #FA2759;
+        }
+
         .project-filter {
             display: flex;
             justify-content: center;
@@ -62,11 +66,10 @@
             &:hover {
                 box-shadow: 5px 5px 18px -5px rgba(250,39,89,0.7);
                 transition: 125ms;
-                cursor: pointer;
+                // cursor: pointer;
             }
 
             .project-info {
-                background-color: white;
                 color: black;
                 width: 100%;
                 height: 100%;
@@ -96,10 +99,28 @@
                     margin-right: 1rem;
                     padding: 1rem;
                     background-color: white;
+                    text-transform: uppercase;
+                    // cursor: pointer;
+
+                    a {
+                        text-decoration: none;
+                        color: #FA2759;
+                    }
+
+                    &:hover {
+                        background-color: #FA2759;
+                        transition: all 125ms ease-in-out;
+
+                        a {
+                            color: black;
+                        }
+                    }
                 }
 
                 &:hover {
-                    opacity: 0.7;
+                    opacity: 1;
+                    background-color: rgba(255, 255, 255, 0.7);
+                    transition: all 125ms ease-in-out;
                 }
             }
         }
