--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -126,3 +126,10 @@
         }
     }
 }
+
+@media (max-width: 1195px) {
+
+    .projects-boxes-container {
+        width: 100% !important;
+    }
+}
