--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -99,3 +99,42 @@
         }
     }
 }
+
+@media (max-width: 1195px) {
+
+    .cv-boxes {
+        width: 185px !important;
+    }
+}
+
+@media (max-width: 1090px) {
+
+    .cv-boxes {
+        width: 165px !important;
+    }
+}
+
+@media (max-width: 950px) {
+
+    .about-me-body {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0 !important;
+    }
+
+    .cv-boxes {
+        width: 450px !important;
+        margin-top: 60px;
+    }
+}
+
+@media (max-width: 820px) {
+
+    .about-me-container {
+        padding: 60px 75px;
+    }
+}
+
+@media (max-width:768px) {
+    
+}
