--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -11,7 +11,7 @@
             </div>
         </div>
     
-        <div>
+        <div class="profile-picture-container">
             <img class="profile-picture" src="../../assets/img/Profilbild.jpeg" alt="">
         </div>
     </div>
