--- a/src/app/home-section/home-section.component.scss
+++ b/src/app/home-section/home-section.component.scss
@@ -1,6 +1,7 @@
 .home-section-container {
     padding-left: 105px;
     padding-right: 105px;
+    height: 100vh;
 
     .home-section {
         max-width: 100vw;
@@ -8,6 +9,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     .welcome-text {
@@ -72,6 +74,94 @@
         }
 
     }
+}
+
+@media (max-width: 1195px) {
+
+    h1 {
+        font-size: 3.5rem !important;
+    }
+}
 
 
+@media (max-width: 1130px) {
+
+    .profile-picture {
+        width: 300px !important;
+        height: 300px !important;
+    }
+}
+
+@media (max-width: 1090px) {
+
+    h1 {
+        font-size: 3.0rem !important;
+    }
+}
+
+@media (max-width: 1024px) {
+    .home-section-container {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+}
+
+@media (max-width: 950px) {
+
+    .home-section-container {
+        padding-top: 100px;
+    }
+
+    .home-section {
+        flex-direction: column-reverse;
+        justify-content: flex-end !important;
+
+        div {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+
+            h1 {
+                margin-top: 3rem;
+            }
+
+            .button {
+                margin-top: 5rem;
+                width: 350px;
+            }
+        }
+    }
+
+    .profile-picture {
+        margin-top: 4rem;
+    }
+
+    .down-icon-container {
+        display: none !important;
+    }
+}
+
+
+@media (max-width: 360px) {
+
+    .home-section-container {
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-top: 135px;
+
+        .home-section {
+            flex-direction: column-reverse;
+            justify-content: flex-end;
+        }
+
+        h1 {
+            font-size: 2rem !important;
+        }
+
+        .profile-picture {
+            width: 200px;
+            height: 200px;
+        }
+    }
 }
