--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -94,8 +94,42 @@
             }
         }
 
-    }
-
-   
+    }  
 }
 
+@media (max-width:768px) {
+    
+    .contact-me-container {
+        padding: 60px 50px;
+
+        .headline-container {
+            width: 450px;
+        }
+
+        form {
+            width: 450px !important;
+        }
+    }
+
+    .button-container {
+        width: 450px !important;
+    }
+}
+
+@media (max-width: 600px) {
+    .contact-me-container {
+        padding: 60px 25px !important;
+
+        .headline-container {
+            width: 350px;
+        }
+
+        form {
+            width: 350px !important;
+        }
+
+        .button-container {
+            width: 350px !important;
+        }
+    }
+}
