--- a/src/app/footer-section/footer-section.component.scss
+++ b/src/app/footer-section/footer-section.component.scss
@@ -27,3 +27,20 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+
+    .social-media-container {
+        img {
+            width: 40px !important;
+            height: 40px !important;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .footer-container {
+        flex-direction: column-reverse;
+        justify-content: space-around;
+    }
+}
