added more media queries

--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -133,3 +133,21 @@
         }
     }
 }
+
+@media (max-width: 375px) {
+
+    .contact-me-container {
+
+        .headline-container {
+            width: 310px !important;
+        }
+
+        form {
+            width: 310px !important;
+        }
+
+        .button-container {
+            width: 310px !important;
+        }
+    }
+}
