--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -175,3 +175,10 @@
         width: 300px !important;
     }
 }
+
+@media (max-width: 375px) {
+    
+    .about-me-container {
+        padding: 60px 25px;
+    }
+}
