--- a/src/app/home-section/home-section.component.scss
+++ b/src/app/home-section/home-section.component.scss
@@ -196,3 +196,18 @@
         }
     }
 }
+
+@media (max-width: 375px) {
+
+    .profile-picture {
+        width: 200px !important;
+        height: 200px !important;
+        margin-top: 2rem;
+    }
+
+    .welcome-text {
+        h1 {
+            margin-top: 2rem !important;
+        }
+    }
+}
