--- a/src/styles.scss
+++ b/src/styles.scss
@@ -130,3 +130,5 @@ body {
     color: whitesmoke;
     overflow-x: hidden;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
