--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -24,6 +24,19 @@ header {
         cursor: pointer;
     }
 
+    .example-button-container {
+
+        button {
+            background-color: whitesmoke;
+            width: 50px;
+            height: 50px;
+
+            mat-icon {
+                filter: invert(95%) sepia(0%) saturate(7479%) hue-rotate(61deg) brightness(109%) contrast(104%);
+            }
+        }
+    }
+
     .burger-menu {
         filter: invert(95%) sepia(0%) saturate(7479%) hue-rotate(61deg) brightness(109%) contrast(104%);
     }
@@ -62,7 +75,7 @@ header {
 
 @media (min-width: 800px) {
     header {
-        .burger-menu {
+        .example-button-container {
             display: none;
         }
     }
