added router link for Impressum

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -14,10 +14,15 @@
     </div>
 
     <mat-menu class="mobile-menu" #menu="matMenu">
-        <button mat-menu-item>Home</button>
-        <button mat-menu-item>Skills</button>
-        <button mat-menu-item>Portfolio</button>
-        <button mat-menu-item>Imprint</button>
+        <a href="#footer-container"><button mat-menu-item>Home</button></a>
+        <a href="#footer-container"><button mat-menu-item>Skills</button></a>
+        <a href="#footer-container"><button mat-menu-item>Portfolio</button></a>
+        <a href="#footer-container"><button mat-menu-item>Imprint</button></a>
+
+        <!-- <button mat-menu-item><a href="#home-section" style="color: black">Home</a></button>
+        <button mat-menu-item> <a href="#skills-section-container" style="color: black">Skills</a></button>
+        <button mat-menu-item> <a href="#portfolio-section-container" style="color: black">Portfolio</a></button>
+        <button mat-menu-item><a href="#footer-container" style="color: black">Imprint</a></button> -->
     </mat-menu>
 
     
