--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
 <app-about-me-section></app-about-me-section>
 <app-contact-section></app-contact-section>
 <app-footer-section></app-footer-section>
+<router-outlet></router-outlet>
