added responsive imprint

--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -21,3 +21,8 @@
     </div>
 
 </div>
+
+<app-skills-section></app-skills-section>
+<app-portfolio-section></app-portfolio-section>
+<app-about-me-section></app-about-me-section>
+<app-contact-section></app-contact-section>
