--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,1 +1,27 @@
-<p>imprint works!</p>
+<div class="imprint-container">
+
+    <h1>Impressum</h1>
+    <br>
+    <br>
+    <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+    <br>
+    <br>
+    <p>
+        Kevin Wagner<br />
+        Raitestra&szlig;e 26<br />
+        71696 M&ouml;glingen
+    </p>
+    <br>
+    <br>
+    <h2>Kontakt</h2>
+    <br>
+    <br>
+    <p>
+        Telefon: +49 176624 10449<br />
+        E-Mail: kevin_wagner4493@web.de
+    </p>
+    <br>
+    <br>
+    <p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>
+
+</div>
