added data-protection component

--- a/src/app/footer-section/footer-section.component.html
+++ b/src/app/footer-section/footer-section.component.html
@@ -1,7 +1,8 @@
 <div class="footer-container" id="footer-container">
 
     <div class="impressum-container">
-        <a href="#">Impressum - Legal Notice</a>
+        <a routerLink="/imprint">Impressum - Legal Notice</a>
+        <a routerLink="/data-protection">Data Protection</a>
     </div>
 
     <div class="social-media-container">
