added some aos effects

--- a/src/app/about-me-section/about-me-section.component.html
+++ b/src/app/about-me-section/about-me-section.component.html
@@ -12,7 +12,7 @@
 
     <div class="about-me-body">
 
-        <div class="cv-boxes">
+        <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
                 <img src="../../assets/icons/walk-line.png" alt="">
             </div>
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div class="cv-boxes">
+        <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
                 <img src="../../assets/icons/heart-line.png" alt="">
             </div>
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <div class="cv-boxes">
+        <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
                 <img src="../../assets/icons/search-line.png" alt="">
             </div>
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="cv-boxes">
+        <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
                 <img src="../../assets/icons/flight-takeoff-line.png" alt="">
             </div>
