--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -1,6 +1,6 @@
 <div class="contact-me-container" id="contact-me-container">
 
-    <div class="headline-container">
+    <div data-aos="zoom-in-left" class="headline-container">
         <h1>Contact me.</h1>
         <p>get in touch via the form below, or by emailing <a href="#">kevin_wagner4493@web.de</a> </p>
     </div>
@@ -17,7 +17,7 @@
             <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
         </form>
 
-        <div class="button-container">
+        <div data-aos="zoom-in-right" class="button-container">
             <div class="button">
                 <a href="#"><p>Send</p></a>
             </div>
