--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -14,7 +14,7 @@
 
         <div class="projects-boxes-container">
 
-            <div class="project-box" *ngIf="allProjects || jsProjects">
+            <div data-aos="flip-right" class="project-box" *ngIf="allProjects || jsProjects">
                 <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_pollo_loco.png" alt="">
                 <div class="project-info">
                     <h1>El Pollo Loco</h1>
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-            <div class="project-box" *ngIf="allProjects || angularProjects">
+            <div data-aos="flip-right" class="project-box" *ngIf="allProjects || angularProjects">
                 <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_ring_of_fire.png" alt="">
                 <div class="project-info">
                     <h1>Ring of Fire</h1>
@@ -38,7 +38,7 @@
                 </div>
             </div>
 
-            <div class="project-box" *ngIf="allProjects || jsProjects" >
+            <div data-aos="flip-right" class="project-box" *ngIf="allProjects || jsProjects" >
                 <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_kanban.png" alt="">
                 <div class="project-info">
                     <h1>Join - Kanban Board</h1>
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-            <div class="project-box" *ngIf="allProjects || jsProjects">
+            <div data-aos="flip-right" class="project-box" *ngIf="allProjects || jsProjects">
                 <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_pokedex.png" alt="">
                 <div class="project-info">
                     <h1>Pokedex</h1>
