--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -3,20 +3,20 @@
     <div class="home-section">
         <div>
             <div class="welcome-text">
-                <h1>Hi,<br> I'm <span class="red">Kevin</span> Wagner<br> Front End develop<span class="mint">e</span>r</h1>
+                <h1 data-aos="fade-right">Hi,<br> I'm <span class="red">Kevin</span> Wagner<br> Front End develop<span class="mint">e</span>r</h1>
             </div>
             
-            <div class="button">
+            <div data-aos="flip-up" class="button">
                 <a href="#contact-me-container"><p>Contact me</p></a>
             </div>
         </div>
     
         <div class="profile-picture-container">
-            <img class="profile-picture" src="../../assets/img/Profilbild.jpeg" alt="">
+            <img data-aos="fade-left" class="profile-picture" src="../../assets/img/Profilbild.jpeg" alt="">
         </div>
     </div>
 
-    <div class="down-icon-container">
+    <div  data-aos="fade-down" class="down-icon-container">
         <a href="#skills-section-container"><img class="down-icon" src="../../assets/icons/down-icon.png" alt=""></a>
     </div>
 
