changed the submit button

--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -18,9 +18,9 @@
         </form>
 
         <div data-aos="zoom-in-right" class="button-container">
-            <div class="button">
+            <button type="submit">
                 <a href="#"><p>Send</p></a>
-            </div>
+            </button>
         </div>
     </div>
 
