--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -69,15 +69,17 @@
         display: flex;
         justify-content: flex-end;
 
-        .button {
+        button {
             display: flex;
             justify-content: center;
             align-items: center;
             border: 2px solid #2DFCD8;
+            background-color: black;
             width: 150px;
             height: 60px;
             margin-top: 45px;
             cursor: pointer;
+            font-size: 1rem;
 
             a {
                 text-decoration: none;
